# Opensens-Parallax

./: .gitignore  README.md  code_last.py  create_shortcut.py  form.ui  main.py  mainwindow.ui  t
Parallax-V2/: CLAUDE.md  CODEX.md  README.md  cli_debug.py  debug_agent.py  pyproject.toml
Parallax-V2/design/3d_debate_visualization/: code.html
Parallax-V2/design/crawl_stage_active_view_1/: code.html
Parallax-V2/design/crawl_stage_active_view_2/: code.html
Parallax-V2/design/debate_stage_active_view_1/: code.html
Parallax-V2/design/debate_stage_active_view_2/: code.html
Parallax-V2/design/debate_stage_detail_view_2/: code.html
Parallax-V2/design/draft_stage_active_view_1/: code.html
Parallax-V2/design/draft_stage_active_view_2/: code.html
Parallax-V2/design/draft_stage_active_view_3/: code.html
Parallax-V2/design/draft_stage_active_view_4/: code.html
Parallax-V2/design/draft_stage_detail_view/: code.html
Parallax-V2/design/experiment_stage_active_view/: code.html
Parallax-V2/design/feasibility_focused_ideas_generation/: code.html
Parallax-V2/design/final_paper_rehab_stage_active/: code.html
Parallax-V2/design/full_validation_report/: code.html
Parallax-V2/design/ideas_generation_active_view/: code.html
Parallax-V2/design/ideas_stage_active_view/: code.html
Parallax-V2/design/ideas_stage_detail_view/: code.html
Parallax-V2/design/impact_focused_ideas_generation/: code.html
Parallax-V2/design/map_stage_active_partial_crawl/: code.html
Parallax-V2/design/map_stage_active_view/: code.html
Parallax-V2/design/new_project_modal_1/: code.html
Parallax-V2/design/new_project_modal_2/: code.html
Parallax-V2/design/new_research_project_modal_1/: code.html
Parallax-V2/design/new_research_project_modal_2/: code.html
Parallax-V2/design/opensens_parallax/: DESIGN.md
Parallax-V2/design/paper_lab_active_rehabilitation/: code.html
Parallax-V2/design/paper_rehab_detail_view_1/: code.html
Parallax-V2/design/paper_rehab_detail_view_2/: code.html
Parallax-V2/design/rehabilitation_complete_dashboard_view/: code.html
Parallax-V2/design/research_command_center/: code.html
Parallax-V2/design/validation_stage_active_view/: code.html
Parallax-V2/docs/: AIS_V2_UPGRADE_PLAN.md  FRONTEND_DEBUG_GUIDE.md  FRONTEND_V2_DEVELOPMENT_PLAN.md  FRONTEND_V3_DEVELOPMENT_PLAN.md  GRANT_HUNT_ROADMAP.md  PAPER_LAB_IMPLEMENTATION_BACKLOG.md  PAPER_LAB_PROGRESS_HANDOFF.md  PAPER_LAB_VISUALIZATION_STRATEGY.md  PARALLAX_IMPLEMENTATION_PLAN.md  V2_DEVELOPMENT_PLAN.md  V3_ARCHITECTURE.md  V3_FRONTEND_TEST_READINESS.md  frontend_improvement_spec.md  parallax_v2_megaprompt.md  reviewtrack.md  stitch_prompt_parallax_homepage.md
Parallax-V2/frontend/: .gitignore  DESIGN.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Parallax-V2/parallax_sdk/: __init__.py  _bootstrap.py  _executor_bridge.py  cli.py  client.py  events.py
Parallax-V2/v3_gateway/: .gitignore  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
Parallax-V3/: .gitignore  CLAUDE.md  CODEX.md  README.md  pyproject.toml
Parallax-V3/.codex-autoresearch/: autoresearch-launch.json  autoresearch-lessons.md  autoresearch-runtime.json  autoresearch-state.json  research-results.tsv  verify_api_oath.py
Parallax-V3/opensens_common/: __init__.py  config.py  llm_client.py
Parallax-V3/parallax_v2/: __init__.py
Parallax-V3/parallax_v3/: __init__.py  __main__.py  cli.py  contracts.py  errors.py  smoke.py
Parallax-V3/tools/: __init__.py  progressive.py
Parallax-V3/workspace/: .gitignore
platform/opensens-common/: pyproject.toml
(+968 files in other folders)
