[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallax-sdk"
version = "0.1.0"
description = "SDK and CLI for the Parallax V2 research pipeline — run headless pipelines from agent swarms"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
parallax = "parallax_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["parallax_sdk"]
