[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax-v3"
version = "0.1.0"
description = "Parallax V3 harness engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pydantic>=2.7",
    "python-Levenshtein>=0.25",
]

[project.scripts]
parallax-v3 = "parallax_v3.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["parallax_v3*", "opensens_common*", "parallax_v2*"]
