[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallax-v3-gateway"
version = "0.1.0"
description = "Parallax V3 Gateway — Autonomous Research Operating System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30.0"]
redis = ["redis>=5.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[project.scripts]
parallax-v3 = "v3_gateway.main:main"

[tool.hatch.build.targets.wheel]
packages = ["v3_gateway"]
