[project]
name = "social-ai-service"
version = "0.1.0"
description = "Social media posting and scheduling microservice for OpenSens"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
